Prevent layout issues for smaller screen sizes
The default font size should handle most cases, but the `word-wrap` declaration ensures that even long words won't break the layout.

--- a/components/composite-heading/composite-heading.scss
+++ b/components/composite-heading/composite-heading.scss
@@ -76,8 +76,18 @@
   &--bold {
     .cu-composite-heading__heading {
       --cu-font-family: 'futura-pt';
-      --cu-font-size: var(--cu-ms7);
+      --cu-font-size: var(--cu-ms4);
       text-transform: uppercase;
+      word-wrap: anywhere;
+
+      @include breakpoint(sm) {
+        --cu-font-size: var(--cu-ms6);
+        word-wrap: normal;
+      }
+
+      @include breakpoint(md) {
+        --cu-font-size: var(--cu-ms7);
+      }
     }
   }
 }
